--- a/src/assets/scss/paper-kit/_responsive.scss
+++ b/src/assets/scss/paper-kit/_responsive.scss
@@ -447,6 +447,15 @@
 
         @include transform-translate-x(230px);
         @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+
+        &::after {
+            background-color: white;
+        }
+
+        a:not(.btn), p, i {
+            color: $blueENG !important;
+        }
+
         ul {
             position: relative;
             z-index: 3;
@@ -458,7 +467,7 @@
             }
             & > .nav-link{
                 margin: 0px 0px;
-                color: $dark-gray !important;
+                color: white !important;
                 text-transform: uppercase;
                 font-weight: 600;
                 font-size: $font-size-small;
@@ -476,7 +485,7 @@
             height: 100%;
             width: 100%;
             position: absolute;
-            background-color: $bg-nude;
+            background-color: white;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(112, 112, 112, 0) 60%, rgba(186, 186, 186, 0.15) 100%);
             display: block;
             content: "";
